testsuite/tests/properties/invalid_array_lit/test.out
== empty_missing_type.lkt ==
empty_missing_type.lkt:4:38: error: Missing element type for empty array literal
4 |     @exported fun p(): Array[Bool] = []
  |                                      ^^


== empty_ok.lkt ==
Code generation was successful

== multiple_incompatible.lkt ==
multiple_incompatible.lkt:4:38: error: In Array literal, expected element of type Bool, got Example
4 |     @exported fun p(): Array[Bool] = [true, node]
  |                                      ^^^^^^^^^^^^


== single_ok.lkt ==
Code generation was successful

lkt_compile: Done
